--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
     - 10
 cache: yarn
 install:
-    - yarn add
+    - yarn
 script:
-    - yarn run build
+    - yarn build
 after_success:
     - cd html
     - git init
