--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ after_success:
     - git config --global user.email "${EMAIL}"
     - git add -A
     - git commit -m 'deploy'
-    - git push --quiet --force "https://${GITHUB_TOKEN}@${GITHUB_REF}" master:${BRANCH}
+    - git push --quiet --force "https://${GITHUB_TOKEN}@${GITHUB_REPO}" master:${BRANCH}
