--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "vuepress dev --open --no-clear-screen --silent",
-        "build": "vuepress build --no-cache html"
+        "build": "vuepress build"
     },
     "devDependencies": {
         "@vuepress/plugin-active-header-links": "^1.3.0",
