--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "vuepress dev --open --no-clear-screen --silent",
+        "dev": "vuepress dev --open --no-clear-screen --silent --temp .temp",
         "build": "vuepress build"
     },
     "devDependencies": {
-        "@vuepress/plugin-active-header-links": "^1.3.0",
-        "@vuepress/plugin-back-to-top": "^1.3.0",
-        "@vuepress/plugin-search": "^1.3.0",
-        "vuepress": "^1.3.0"
+        "@vuepress/plugin-active-header-links": "^1.8.2",
+        "@vuepress/plugin-back-to-top": "^1.8.2",
+        "@vuepress/plugin-medium-zoom": "^1.8.2",
+        "@vuepress/plugin-search": "^1.8.2",
+        "vuepress": "^1.8.2"
     },
     "dependencies": {}
 }
