--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,9 @@ jobs:
             # 装依赖
             - name: Install & Build
               run: |
-              echo "//packages.aliyun.com/60ab6f7b2c5969c370c58c11/npm/npm-registry/:_authToken=NjBhYjZmNjA2ZGEyZjczODMxZWIzMTNlJTNBb1IlMjlJRTRxZkJTVko=" >> .npmrc
-              echo "always-auth=true" >> .npmrc
+                echo "//packages.aliyun.com/60ab6f7b2c5969c370c58c11/npm/npm-registry/:_authToken=NjBhYjZmNjA2ZGEyZjczODMxZWIzMTNlJTNBb1IlMjlJRTRxZkJTVko=" >> .npmrc
+                echo "always-auth=true" >> .npmrc
+                yarn
 
             # 打包
             - name: Build
