--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "markdown-it-plantuml": "^1.4.1",
     "prettier": "^2.5.1",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.45.0",
-    "vitepress": "1.0.0-alpha.4",
+    "vitepress": "1.0.0-alpha.10",
     "vitepress-theme-demoblock": "^1.4.2"
   },
   "engines": {
