--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
 
       # 上传网站搜索资源
       - name: Algolia crawler creation and crawl
-        uses: iChochy/Algolia-Upload-Records@main
+        uses: algolia/algoliasearch-crawler-github-actions@v1.0.10
         with:
           crawler-user-id: ""
           crawler-api-key: ""
