--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,11 +45,25 @@ jobs:
       #           REMOTE_USER: ${{ env.USER_NAME }}
       #           TARGET: /home/project/client/blog
 
-      # 上传网站搜索资源
-      - name: Algolia crawler creation and crawl
-        uses: rxrw/algolia-index-uploader@v1
-        with:
-          algolia_index_id: '8TBF6K4PZU'
-          algolia_index_admin_key: 'd25d40ad11d1f2831215b67015ddca25'
-          algolia_index_name: 'seedltd-online-docs'
-          index_path: 'docs/algolia.json'
+  scrape:
+    runs-on: ubuntu-latest
+    env:
+      ALGOLIA_APPLICATION_ID: ${{ secrets.ALGOLIA_APPLICATION_ID }}
+      ALGOLIA_WRITE_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
+      ALGOLIA_SITE_URL: http://docs.seedltd.cn
+      ALGOLIA_INDEX_NAME: seedltd-online-docs
+    steps:
+      - name: check out code 🛎
+        uses: actions/checkout@v2
+
+      - name: clear algolia index 🧽
+        run: |
+          cd .algolia
+          pip install --upgrade 'algoliasearch>=2.0,<3.0'
+          python clear_index.py
+      - name: scrape the site 🧽
+        run: |
+          cd .algolia
+          touch .env
+          sudo chmod +x ./scraper.sh
+          ./scraper.sh
