--- a/.algolia/config.json
+++ b/.algolia/config.json
@@ -1,33 +1,20 @@
 {
   "index_name": "seedltd-online-docs",
-  "start_urls": [
-    {
-      "url": "http://docs.seedltd.cn",
-      "selectors_key": "v2",
-      "tags": ["v2"]
-    }
-  ],
+  "start_urls": ["http://docs.seedltd.cn"],
   "stop_urls": [],
   "selectors": {
-    "v2": {
-      "lvl0": ".content  h1",
-      "lvl1": ".content  h1",
-      "lvl2": ".content  h3",
-      "lvl3": ".content  h4",
-      "lvl4": ".content  h5",
-      "lvl5": ".content  h6",
-      "text": ".content  p",
-      "lang": {
-        "selector": "/html/@lang",
-        "type": "xpath",
-        "global": true
-      }
-    }
+    "lvl0": {
+      "selector": "",
+      "default_value": "Documentation"
+    },
+    "lvl1": ".content h1",
+    "lvl2": ".content h2",
+    "lvl3": ".content h3",
+    "lvl4": ".content h4",
+    "lvl5": ".content h5",
+    "text": ".content p, .content li",
+    "strip_chars": " .,;:#"
   },
-  "scrape_start_urls": false,
-  "strip_chars": " .,;:#",
-  "custom_settings": {
-    "attributesForFaceting": ["lang", "tags"]
-  },
-  "nb_hits": 6366
+  "conversation_id": ["1348542034"],
+  "nb_hits": 302
 }
