--- a/.algolia/config.json
+++ b/.algolia/config.json
@@ -12,8 +12,7 @@
     "lvl3": ".content h3",
     "lvl4": ".content h4",
     "lvl5": ".content h5",
-    "text": ".content p, .content li",
-    "strip_chars": " .,;:#"
+    "text": ".content p, .content li"
   },
   "conversation_id": ["1348542034"],
   "nb_hits": 302
