--- a/.algolia/config.json
+++ b/.algolia/config.json
@@ -4,15 +4,15 @@
   "stop_urls": [],
   "selectors": {
     "lvl0": {
-      "selector": "",
+      "selector": ".content h1",
       "default_value": "Documentation"
     },
-    "lvl1": ".content h1",
-    "lvl2": ".content h2",
-    "lvl3": ".content h3",
-    "lvl4": ".content h4",
-    "lvl5": ".content h5",
-    "text": ".content p, .content li"
+    "lvl1": ".content h2",
+    "lvl2": ".content h3",
+    "lvl3": ".content h4",
+    "lvl4": ".content h5",
+    "lvl5": ".content h6",
+    "text": ".content p, .content li,  .content a"
   },
   "conversation_id": ["1348542034"],
   "nb_hits": 302
