--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "prettier": "^2.5.1",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.45.0",
-    "vitepress": "1.0.0-alpha.10",
-    "vitepress-theme-demoblock": "^1.4.2"
+    "vitepress": "1.0.0-beta.2"
   },
   "engines": {
     "node": ">=16.0.0"
