--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 ignore-workspace-root-check=true
 strict-peer-dependencies=false
 shell-emulator=true
-registry=https://registry.npmjs.org
-# registry=https://registry.npmmirror.com/
+# registry=https://registry.npmjs.org
+registry=https://registry.npmmirror.com/
 # registry=https://devops.leaderrun.com/nexus/repository/npm-group/
