--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "markdown-it-plantuml": "^1.4.1",
+    "mermaid": "^10.2.4",
     "prettier": "^2.5.1",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.45.0",
-    "vitepress": "1.0.0-beta.2"
+    "vitepress": "1.0.0-beta.2",
+    "vitepress-plugin-mermaid": "^2.0.13"
   },
   "engines": {
     "node": ">=16.0.0"
