--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,16 +29,31 @@ jobs:
       - name: Setup node16 👀
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           always-auth: true
 
-      # 装依赖
+      - name: Setup pnpm 🚀
+        uses: pnpm/action-setup@v4
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies 🔧
-        run: yarn
+        run: pnpm i --no-frozen-lockfile
 
       # 打包
       - name: Build website 🤓
-        run: yarn docs:build
+        run: pnpm docs:build
 
       # 上传打包资源
       - name: Deploy seedltd docs 🚀
