--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,18 @@ jobs:
         with:
           ref: master
 
-      - name: Setup node16 👀
-        uses: actions/setup-node@v3
+      - name: Setup node18 👀
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           always-auth: true
 
+
       - name: Setup pnpm 🚀
         uses: pnpm/action-setup@v4
+        with:
+          version: 8.6.5
+          run_install: false
 
       - name: Get pnpm store directory
         shell: bash
