--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev src",
     "docs:build": "vitepress build src",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "element-next": "^1.50.0",
+     "vue": "^3.4.21",
     "element-plus": "npm:@lhrdc/element-plus@2.7.6-stable.1"
   },
   "devDependencies": {
@@ -20,8 +22,8 @@
     "prettier": "^3.3.3",
     "vitepress": "1.3.1",
     "vitepress-plugin-mermaid": "^2.0.16",
-    "vitepress-theme-demoblock": "^3.0.7",
-    "vue": "^3.4.21"
+    "vitepress-theme-demoblock": "^3.0.7"
+
   },
   "engines": {
     "node": ">=18.0.0"
